test/corpus/expression_values.txt
===
Expression: Values: Builtin function call
===

arch()

num_cpus()

os()

os_family()

---

(file
  (expression
    (value
      (builtin_function_call)))
  (expression
    (value
      (builtin_function_call)))
  (expression
    (value
      (builtin_function_call)))
  (expression
    (value
      (builtin_function_call))))
