test/corpus/format_strings.txt
===
Format string: empty
===

a := f""

---

(file
  (assignment
    (identifier)
    (expression
      (value
        (string)))))

===
Format string: with basic content
===

a := f"normal string 🦀"

---

(file
  (assignment
    (identifier)
    (expression
      (value
        (string)))))

===
Format string: with line breaks
===

a := f"
  a line break
  or more"

---

(file
  (assignment
    (identifier)
    (expression
      (value
        (string)))))

===
Format string: with escape sequences
===

a := f"normal \t \n \r \\ \" \u{a1F} string"

---

(file
  (assignment
    (identifier)
    (expression
      (value
        (string
          (escape_sequence)
          (escape_sequence)
          (escape_sequence)
          (escape_sequence)
          (escape_sequence)
          (escape_sequence))))))

===
Format string: with simple interpolation
===

a := f"{{variable_name}}"

---

(file
  (assignment
    (identifier)
    (expression
      (value
        (string
          (interpolation
            (expression
              (value
                (identifier)))))))))

===
Format string: with expression interpolation
===

a := f"{{os() / arch()}}"

---

(file
  (assignment
    (identifier)
    (expression
      (value
        (string
          (interpolation
            (expression
              (value
                (function_call
                  (identifier)))
              (expression
                (value
                  (function_call
                    (identifier)))))))))))

===
Format string: with escaped braces
===

a := f"{{{{not an expression}}"

---

(file
  (assignment
    (identifier)
    (expression
      (value
        (string)))))
