test/corpus/indented_raw_format_strings.txt
===
Indented raw format string: empty
===

a := f''''''

---

(file
  (assignment
    (identifier)
    (expression
      (value
        (string)))))

===
Indented raw format string: with basic content
===

a := f'''raw format string 🦀'''

---

(file
  (assignment
    (identifier)
    (expression
      (value
        (string)))))

===
Indented raw format string: with line breaks
===

a := f'''
  a line break
  or more'''

---

(file
  (assignment
    (identifier)
    (expression
      (value
        (string)))))

===
Indented raw format string: with " inside
===

a := f'''
  a line "break"
  or more'''

---

(file
  (assignment
    (identifier)
    (expression
      (value
        (string)))))

===
Indented raw format string: with ' inside
===

a := f'''
  a line 'break'
  or more'''

---

(file
  (assignment
    (identifier)
    (expression
      (value
        (string)))))

===
Indented raw format string: with escape sequences
===

a := f'''raw \t \n \r \\ \" \u{a1F} string'''

---

(file
  (assignment
    (identifier)
    (expression
      (value
        (string)))))

===
Indented raw format string: with simple interpolation
===

a := f'''{{variable_name}}'''

---

(file
  (assignment
    (identifier)
    (expression
      (value
        (string
          (interpolation_start_marker)
          (expression
            (value
              (identifier)))
          (interpolation_end_marker))))))

===
Indented raw format string: with expression interpolation
===

a := f'''{{os() / arch()}}'''

---

(file
  (assignment
    (identifier)
    (expression
      (value
        (string
          (interpolation_start_marker)
          (expression
            (value
              (function_call
                (identifier)))
            (expression
              (value
                (function_call
                  (identifier)))))
          (interpolation_end_marker))))))

===
Indented raw format string: with escaped braces
===

a := f'''{{{{not an expression}}'''

---

(file
  (assignment
    (identifier)
    (expression
      (value
        (string)))))
