test/corpus/recipe_well_known_attributes.txt
===
Recipes: Attributes: Well-Known: arg()
===

[arg("field", pattern="\d+")]
r field:

[arg("field", help="help text")]
r field:

[arg("field", long="long")]
r field:

[arg("field", long)]
r field:

[arg("field", short="x")]
r field:

[arg("field", value="VALUE")]
r field:

---

(file
  (recipe
    (attribute
      (identifier)
      (expression
        (value
          (string)))
      (attribute_named_parameter
        (identifier)
        (expression
          (value
            (string)))))
    (identifier)
    (recipe_parameters
      (recipe_parameter
        (identifier))))
  (recipe
    (attribute
      (identifier)
      (expression
        (value
          (string)))
      (attribute_named_parameter
        (identifier)
        (expression
          (value
            (string)))))
    (identifier)
    (recipe_parameters
      (recipe_parameter
        (identifier))))
  (recipe
    (attribute
      (identifier)
      (expression
        (value
          (string)))
      (attribute_named_parameter
        (identifier)
        (expression
          (value
            (string)))))
    (identifier)
    (recipe_parameters
      (recipe_parameter
        (identifier))))
  (recipe
    (attribute
      (identifier)
      (expression
        (value
          (string)))
      (attribute_named_parameter
        (identifier)))
    (identifier)
    (recipe_parameters
      (recipe_parameter
        (identifier))))
  (recipe
    (attribute
      (identifier)
      (expression
        (value
          (string)))
      (attribute_named_parameter
        (identifier)
        (expression
          (value
            (string)))))
    (identifier)
    (recipe_parameters
      (recipe_parameter
        (identifier))))
  (recipe
    (attribute
      (identifier)
      (expression
        (value
          (string)))
      (attribute_named_parameter
        (identifier)
        (expression
          (value
            (string)))))
    (identifier)
    (recipe_parameters
      (recipe_parameter
        (identifier)))))

===
Recipes: Attributes: Well-Known: env()
===

[env("ENV", "value")]
r:

[env("IS" + "expr", os())]
r:

---

(file
  (recipe
    (attribute
      (identifier)
      (expression
        (value
          (string)))
      (expression
        (value
          (string))))
    (identifier))
  (recipe
    (attribute
      (identifier)
      (expression
        (value
          (string))
        (expression
          (value
            (string))))
      (expression
        (value
          (function_call
            (identifier)))))
    (identifier)))

===
Recipes: Attributes: Well-Known: metadata()
===

[metadata("metadata", "value")]
[metadata("metadata-2", "value-2")]
r:

---

(file
  (recipe
    (attribute
      (identifier)
      (expression
        (value
          (string)))
      (expression
        (value
          (string))))
    (attribute
      (identifier)
      (expression
        (value
          (string)))
      (expression
        (value
          (string))))
    (identifier)))

===
Recipes: Attributes: Well-Known: confirm()
===

[confirm("with os: " + os())]
r:

---

(file
  (recipe
    (attribute
      (identifier)
      (expression
        (value
          (string))
        (expression
          (value
            (function_call
              (identifier))))))
    (identifier)))
